# home_credit_risk_deeplearn

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/home_credit_risk/: __init__.py  config.py  logger.py  main.py  trivial_test.py
tests/: test_trivial.py
